# compile

./: CMakeLists.txt  main.cpp
Lexing/: LexAnalysis.cpp  LexAnalysis.h  LexingException.cpp  LexingException.h
Parsing/: Parsing.cpp  Parsing.h  ParsingException.cpp  ParsingException.h
includes/: Externs.h  MyType.cpp  MyType.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  ioControl.cpp  ioControl.h
